Added footer to Saenz post

--- a/web/_posts/2013-05-06-saenz.md
+++ b/web/_posts/2013-05-06-saenz.md
@@ -54,6 +54,8 @@ Los gobernantes españoles llevan años utilizando todas las herramientas a su d
 
 La dimisión de Sáenz pone fin a esta historia, pero es sólo el principio de una jubilación dorada para el ya ex consejero delegado, que cobrará una pensión a cuenta del Banco Santander de [88.174.000 euros][25], la más alta del grupo, incluso bastante más cuantiosa que la de su patrón y protector, Emilio Botín (25.566.000 euros).
 
+_(Este artículo [fue publicado][26] en la agencia brasileña independiente de periodismo de investigación [Pública][27].)_
+
 [1]: http://www.economipedia.com/2013/02/top-bancos-mas-grandes-del-mundo-2013.html
 [2]: http://www.elindultometro.es/files/retribucion_consejeros_santander_cnmv.pdf
 [3]: http://www.santander.com/csgs/Satellite/CFWCSancomQP01/es_ES/Corporativo/Sala-de-comunicacion/Javier-Marin-nuevo-consejero-delegado-de-Banco-Santander.html
@@ -73,3 +75,5 @@ La dimisión de Sáenz pone fin a esta historia, pero es sólo el principio de u
 [23]: http://www.europapress.es/videos/alfredo-saenz-cree-finales-2013-veran-signos-crecimiento-20130426131204.html
 [24]: http://www.fpa.es/es/fundacion/financiacion/
 [25]: http://www.santander.com/csgs/StaticBS?ssbinary=true&blobtable=MungoBlobs&blobkey=id&SSURIsscontext=Satellite+Server&blobcol=urldata&SSURIcontainer=Default&SSURIsession=false&blobwhere=1278692194819&blobheader=application/pdf&SSURIapptype=BlobServer
+[26]: http://www.apublica.org/2013/05/saenz-santander-corrupcao-renuncia-indulto/
+[27]: http://www.apublica.org/
